# KSA_TargetSim

./: CMakeLists.txt
analysis/root/: CMakeLists.txt  compare_configs.C  export_run_artifacts.C  plot_run_summary.C
app/: CMakeLists.txt
app/config/: default_UAl.json  default_UMo.json  default_WTa.json  production_UMo.json  production_WTa.json  quick_vis.json
app/include/: ActionInitialization.h  Cli.h  Config.h  DetectorConstruction.h  EventAction.h  PhysicsListFactory.h  PrimaryGeneratorAction.h  RunAction.h  SteppingAction.h
app/macros/: run_batch.mac  vis_ogl.mac
app/src/: ActionInitialization.cpp  Cli.cpp  Config.cpp  DetectorConstruction.cpp  EventAction.cpp  PhysicsListFactory.cpp  PrimaryGeneratorAction.cpp  RunAction.cpp  SteppingAction.cpp  main.cpp
cmake/: ToolchainHints.cmake
docs/: README.md
scripts/: env.sh  export_root_artifacts.sh
tests/: CMakeLists.txt  test_smoke.cmake
